# eurorack

./: .gitmodules  CMakeLists.txt  library.json
braids/: analog_oscillator.h  envelope.h  macro_oscillator.h  quantizer.h  resources.cc  resources.h  settings.h  signature_waveshaper.h  svf.h
braids/resources/: lookup_tables.py  waveforms.py
clouds/: resources.cc  resources.h
clouds/dsp/: audio_buffer.h  correlator.h  grain.h  granular_processor.cc  granular_processor.h  granular_sample_player.h  looping_sample_player.h  parameters.h  sample_rate_converter.h  window.h
clouds/dsp/fx/: fx_engine.h  pitch_shifter.h  reverb.h
clouds/dsp/pvoc/: frame_transformation.h  phase_vocoder.h  stft.h
clouds/resources/: src_filters.py
elements/: resources.cc
elements/dsp/: dsp.h  exciter.cc  exciter.h  multistage_envelope.h  ominous_voice.h  part.h  resonator.cc  string.h  tube.h  voice.h
plaits/: resources.h  user_data.h
plaits/dsp/: dsp.h
plaits/dsp/engine/: chord_engine.cc
plaits/dsp/engine2/: chiptune_engine.cc
plaits/dsp/fm/: envelope.h
plaits/dsp/oscillator/: wavetable_oscillator.h
rings/: resources.cc  resources.h
rings/dsp/: dsp.h  fm_voice.cc  fm_voice.h  follower.h  limiter.h  note_filter.h  onset_detector.h  part.cc  part.h  patch.h  performance_state.h  plucker.h  resonator.h  string.h  string_synth_envelope.h  string_synth_oscillator.h  string_synth_part.h  strummer.h
rings/dsp/fx/: chorus.h  ensemble.h  fx_engine.h  reverb.h
rings/resources/: lookup_tables.py
tides2/: io_buffer.h  poly_slope_generator.h  ramp_generator.h  ramp_shaper.h  resources.cc  resources.h  tides.cc
tides2/drivers/: debug_pin.h
tides2/ramp/: ramp_extractor.cc  ramp_extractor.h  ratio.h
tides2/resources/: lookup_tables.py
tides2/test/: tides_test.cc
